--- a/index.ipynb
+++ b/index.ipynb
@@ -151,9 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. --- canine --- This is the dog class directly accessing its class variable\n",
+      "2. --- canine --- This is the dog class invoking the species *class method* to access its class variable\n"
+     ]
+    }
+   ],
    "source": [
     "class Dog:\n",
     "    \n",
@@ -237,9 +246,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. --- [] --- Checking the Dog class's class variale _all\n",
+      "2. --- [<__main__.Dog object at 0x7efcd00f01d0>] --- Using the add_dog class method to add a new dog instance to _all\n",
+      "3. --- [<__main__.Dog object at 0x7efcd00f01d0>] --- Checking the Dog class's class variale _all\n"
+     ]
+    }
+   ],
    "source": [
     "class Dog:\n",
     "    \n",
@@ -323,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
